y.output
Terminals unused in grammar

   CHAR
   DEFAULT
   DO


State 19 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 60 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 65 conflicts: 1 shift/reduce
State 66 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce
State 108 conflicts: 1 reduce/reduce
State 111 conflicts: 21 reduce/reduce
State 157 conflicts: 1 shift/reduce
State 186 conflicts: 1 shift/reduce
State 198 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declarations statments

    2 declarations: declarations declaration
    3             | %empty

    4 statments: statments statment
    5          | %empty

    6 declaration: constant
    7            | variable
    8            | array
    9            | function
   10            | procedure

   11 constant: CONST ID ':' Type ASSIGN expressions
   12         | CONST ID ASSIGN expressions

   13 variable: VAR ID ':' Type
   14         | VAR ID ASSIGN const_exp
   15         | VAR ID ':' Type ASSIGN const_exp

   16 Types: Type
   17      | array

   18 array: VAR ID ':' ARRAY const_exp '.' '.' const_exp OF Type

   19 Type: BOOL
   20     | INT
   21     | REAL
   22     | STRING

   23 $@1: %empty

   24 function: FUNCTION ID '(' ')' ':' Types $@1 contents END ID

   25 $@2: %empty

   26 function: FUNCTION ID '(' functionVarA functionVarB ')' ':' Types $@2 contents END ID

   27 functionVarA: ID ':' Type
   28             | ID ':' ARRAY const_exp '.' '.' const_exp OF Type

   29 functionVarB: functionVarB ',' ID ':' Type
   30             | functionVarB ',' ID ':' ARRAY const_exp '.' '.' const_exp OF Type
   31             | %empty

   32 $@3: %empty

   33 procedure: PROCEDURE ID '(' ')' $@3 contents END ID

   34 $@4: %empty

   35 procedure: PROCEDURE ID '(' functionVarA functionVarB ')' $@4 contents END ID

   36 contents: contents content
   37         | %empty

   38 content: variable
   39        | constant
   40        | array
   41        | statment

   42 statment: block
   43         | simple
   44         | expressions
   45         | conditional
   46         | loop

   47 $@5: %empty

   48 block: BEG $@5 content END

   49 simple: ID ASSIGN expressions
   50       | PUT expressions
   51       | GET expressions
   52       | RESULT expressions
   53       | RETURN
   54       | EXIT
   55       | EXIT WHEN bool_expression
   56       | SKIP

   57 expressions: '-' expressions
   58            | '(' expressions ')'
   59            | expressions '*' expressions
   60            | expressions '/' expressions
   61            | expressions MOD expressions
   62            | expressions '+' expressions
   63            | expressions '-' expressions
   64            | bool_expression
   65            | const_exp
   66            | function_invocation
   67            | ID '[' INT_NUMBER ']'
   68            | ID

   69 const_exp: INT_NUMBER
   70          | REAL_NUMBER
   71          | STR
   72          | TRUE
   73          | FALSE

   74 bool_expression: '(' bool_expression ')'
   75                | expressions '<' expressions
   76                | expressions LESS_EQUAL expressions
   77                | expressions '=' expressions
   78                | expressions MORE_EQUAL expressions
   79                | expressions '>' expressions
   80                | expressions NOT_EQUAL expressions
   81                | NOT expressions
   82                | expressions AND expressions
   83                | expressions OR expressions

   84 function_invocation: ID '(' ')'
   85                    | ID '(' functionInputA functionInputB ')'

   86 functionInputA: expressions

   87 functionInputB: functionInputB ',' expressions
   88               | %empty

   89 $@6: %empty

   90 conditional: IF bool_expression THEN $@6 contents ELSE content END IF

   91 $@7: %empty

   92 conditional: IF bool_expression THEN $@7 contents END IF

   93 $@8: %empty

   94 loop: LOOP $@8 contents END LOOP

   95 $@9: %empty

   96 loop: FOR ID ':' expressions '.' '.' expressions $@9 contents END FOR

   97 $@10: %empty

   98 loop: FOR DECREASING ID ':' expressions '.' '.' expressions $@10 contents END FOR


Terminals, with rules where they appear

$end (0) 0
'(' (40) 24 26 33 35 58 74 84 85
')' (41) 24 26 33 35 58 74 84 85
'*' (42) 59
'+' (43) 62
',' (44) 29 30 87
'-' (45) 57 63
'.' (46) 18 28 30 96 98
'/' (47) 60
':' (58) 11 13 15 18 24 26 27 28 29 30 96 98
'<' (60) 75
'=' (61) 77
'>' (62) 79
'[' (91) 67
']' (93) 67
error (256)
REAL (258) 21
INT (259) 20
STRING (260) 22
BOOL (261) 19
ID (262) 11 12 13 14 15 18 24 26 27 28 29 30 33 35 49 67 68 84 85 96
    98
INT_NUMBER (263) 67 69
REAL_NUMBER (264) 70
STR (265) 71
TRUE (266) 72
FALSE (267) 73
ARRAY (268) 18 28 30
BEG (269) 48
CHAR (270)
DECREASING (271) 98
DEFAULT (272)
DO (273)
ELSE (274) 90
END (275) 24 26 33 35 48 90 92 94 96 98
EXIT (276) 54 55
FOR (277) 96 98
FUNCTION (278) 24 26
GET (279) 51
IF (280) 90 92
LOOP (281) 94
OF (282) 18 28 30
PUT (283) 50
PROCEDURE (284) 33 35
RESULT (285) 52
RETURN (286) 53
SKIP (287) 56
THEN (288) 90 92
VAR (289) 13 14 15 18
WHEN (290) 55
CONST (291) 11 12
ASSIGN (292) 11 12 14 15 49
MOD (293) 61
LESS_EQUAL (294) 76
MORE_EQUAL (295) 78
NOT_EQUAL (296) 80
AND (297) 82
OR (298) 83
NOT (299) 81
NEGATIVE (300)


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
program (61)
    on left: 1, on right: 0
declarations (62)
    on left: 2 3, on right: 1 2
statments (63)
    on left: 4 5, on right: 1 4
declaration (64)
    on left: 6 7 8 9 10, on right: 2
constant (65)
    on left: 11 12, on right: 6 39
variable (66)
    on left: 13 14 15, on right: 7 38
Types (67)
    on left: 16 17, on right: 24 26
array (68)
    on left: 18, on right: 8 17 40
Type (69)
    on left: 19 20 21 22, on right: 11 13 15 16 18 27 28 29 30
function (70)
    on left: 24 26, on right: 9
$@1 (71)
    on left: 23, on right: 24
$@2 (72)
    on left: 25, on right: 26
functionVarA (73)
    on left: 27 28, on right: 26 35
functionVarB (74)
    on left: 29 30 31, on right: 26 29 30 35
procedure (75)
    on left: 33 35, on right: 10
$@3 (76)
    on left: 32, on right: 33
$@4 (77)
    on left: 34, on right: 35
contents (78)
    on left: 36 37, on right: 24 26 33 35 36 90 92 94 96 98
content (79)
    on left: 38 39 40 41, on right: 36 48 90
statment (80)
    on left: 42 43 44 45 46, on right: 4 41
block (81)
    on left: 48, on right: 42
$@5 (82)
    on left: 47, on right: 48
simple (83)
    on left: 49 50 51 52 53 54 55 56, on right: 43
expressions (84)
    on left: 57 58 59 60 61 62 63 64 65 66 67 68, on right: 11 12 44
    49 50 51 52 57 58 59 60 61 62 63 75 76 77 78 79 80 81 82 83 86
    87 96 98
const_exp (85)
    on left: 69 70 71 72 73, on right: 14 15 18 28 30 65
bool_expression (86)
    on left: 74 75 76 77 78 79 80 81 82 83, on right: 55 64 74 90 92
function_invocation (87)
    on left: 84 85, on right: 66
functionInputA (88)
    on left: 86, on right: 85
functionInputB (89)
    on left: 87 88, on right: 85 87
conditional (90)
    on left: 90 92, on right: 45
$@6 (91)
    on left: 89, on right: 90
$@7 (92)
    on left: 91, on right: 92
loop (93)
    on left: 94 96 98, on right: 46
$@8 (94)
    on left: 93, on right: 94
$@9 (95)
    on left: 95, on right: 96
$@10 (96)
    on left: 97, on right: 98


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (declarations)

    program       go to state 1
    declarations  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: declarations . statments
    2 declarations: declarations . declaration

    FUNCTION   shift, and go to state 4
    PROCEDURE  shift, and go to state 5
    VAR        shift, and go to state 6
    CONST      shift, and go to state 7

    $default  reduce using rule 5 (statments)

    statments    go to state 8
    declaration  go to state 9
    constant     go to state 10
    variable     go to state 11
    array        go to state 12
    function     go to state 13
    procedure    go to state 14


State 3

    0 $accept: program $end .

    $default  accept


State 4

   24 function: FUNCTION . ID '(' ')' ':' Types $@1 contents END ID
   26         | FUNCTION . ID '(' functionVarA functionVarB ')' ':' Types $@2 contents END ID

    ID  shift, and go to state 15


State 5

   33 procedure: PROCEDURE . ID '(' ')' $@3 contents END ID
   35          | PROCEDURE . ID '(' functionVarA functionVarB ')' $@4 contents END ID

    ID  shift, and go to state 16


State 6

   13 variable: VAR . ID ':' Type
   14         | VAR . ID ASSIGN const_exp
   15         | VAR . ID ':' Type ASSIGN const_exp
   18 array: VAR . ID ':' ARRAY const_exp '.' '.' const_exp OF Type

    ID  shift, and go to state 17


State 7

   11 constant: CONST . ID ':' Type ASSIGN expressions
   12         | CONST . ID ASSIGN expressions

    ID  shift, and go to state 18


State 8

    1 program: declarations statments .
    4 statments: statments . statment

    ID           shift, and go to state 19
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    BEG          shift, and go to state 25
    EXIT         shift, and go to state 26
    FOR          shift, and go to state 27
    GET          shift, and go to state 28
    IF           shift, and go to state 29
    LOOP         shift, and go to state 30
    PUT          shift, and go to state 31
    RESULT       shift, and go to state 32
    RETURN       shift, and go to state 33
    SKIP         shift, and go to state 34
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37

    $default  reduce using rule 1 (program)

    statment             go to state 38
    block                go to state 39
    simple               go to state 40
    expressions          go to state 41
    const_exp            go to state 42
    bool_expression      go to state 43
    function_invocation  go to state 44
    conditional          go to state 45
    loop                 go to state 46


State 9

    2 declarations: declarations declaration .

    $default  reduce using rule 2 (declarations)


State 10

    6 declaration: constant .

    $default  reduce using rule 6 (declaration)


State 11

    7 declaration: variable .

    $default  reduce using rule 7 (declaration)


State 12

    8 declaration: array .

    $default  reduce using rule 8 (declaration)


State 13

    9 declaration: function .

    $default  reduce using rule 9 (declaration)


State 14

   10 declaration: procedure .

    $default  reduce using rule 10 (declaration)


State 15

   24 function: FUNCTION ID . '(' ')' ':' Types $@1 contents END ID
   26         | FUNCTION ID . '(' functionVarA functionVarB ')' ':' Types $@2 contents END ID

    '('  shift, and go to state 47


State 16

   33 procedure: PROCEDURE ID . '(' ')' $@3 contents END ID
   35          | PROCEDURE ID . '(' functionVarA functionVarB ')' $@4 contents END ID

    '('  shift, and go to state 48


State 17

   13 variable: VAR ID . ':' Type
   14         | VAR ID . ASSIGN const_exp
   15         | VAR ID . ':' Type ASSIGN const_exp
   18 array: VAR ID . ':' ARRAY const_exp '.' '.' const_exp OF Type

    ASSIGN  shift, and go to state 49
    ':'     shift, and go to state 50


State 18

   11 constant: CONST ID . ':' Type ASSIGN expressions
   12         | CONST ID . ASSIGN expressions

    ASSIGN  shift, and go to state 51
    ':'     shift, and go to state 52


State 19

   49 simple: ID . ASSIGN expressions
   67 expressions: ID . '[' INT_NUMBER ']'
   68            | ID .
   84 function_invocation: ID . '(' ')'
   85                    | ID . '(' functionInputA functionInputB ')'

    ASSIGN  shift, and go to state 53
    '('     shift, and go to state 54
    '['     shift, and go to state 55

    '('       [reduce using rule 68 (expressions)]
    $default  reduce using rule 68 (expressions)


State 20

   69 const_exp: INT_NUMBER .

    $default  reduce using rule 69 (const_exp)


State 21

   70 const_exp: REAL_NUMBER .

    $default  reduce using rule 70 (const_exp)


State 22

   71 const_exp: STR .

    $default  reduce using rule 71 (const_exp)


State 23

   72 const_exp: TRUE .

    $default  reduce using rule 72 (const_exp)


State 24

   73 const_exp: FALSE .

    $default  reduce using rule 73 (const_exp)


State 25

   48 block: BEG . $@5 content END

    $default  reduce using rule 47 ($@5)

    $@5  go to state 56


State 26

   54 simple: EXIT .
   55       | EXIT . WHEN bool_expression

    WHEN  shift, and go to state 57

    $default  reduce using rule 54 (simple)


State 27

   96 loop: FOR . ID ':' expressions '.' '.' expressions $@9 contents END FOR
   98     | FOR . DECREASING ID ':' expressions '.' '.' expressions $@10 contents END FOR

    ID          shift, and go to state 58
    DECREASING  shift, and go to state 59


State 28

   51 simple: GET . expressions

    ID           shift, and go to state 60
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37

    expressions          go to state 61
    const_exp            go to state 42
    bool_expression      go to state 43
    function_invocation  go to state 44


State 29

   90 conditional: IF . bool_expression THEN $@6 contents ELSE content END IF
   92            | IF . bool_expression THEN $@7 contents END IF

    ID           shift, and go to state 60
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37

    expressions          go to state 62
    const_exp            go to state 42
    bool_expression      go to state 63
    function_invocation  go to state 44


State 30

   94 loop: LOOP . $@8 contents END LOOP

    $default  reduce using rule 93 ($@8)

    $@8  go to state 64


State 31

   50 simple: PUT . expressions

    ID           shift, and go to state 60
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37

    expressions          go to state 65
    const_exp            go to state 42
    bool_expression      go to state 43
    function_invocation  go to state 44


State 32

   52 simple: RESULT . expressions

    ID           shift, and go to state 60
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37

    expressions          go to state 66
    const_exp            go to state 42
    bool_expression      go to state 43
    function_invocation  go to state 44


State 33

   53 simple: RETURN .

    $default  reduce using rule 53 (simple)


State 34

   56 simple: SKIP .

    $default  reduce using rule 56 (simple)


State 35

   81 bool_expression: NOT . expressions

    ID           shift, and go to state 60
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37

    expressions          go to state 67
    const_exp            go to state 42
    bool_expression      go to state 43
    function_invocation  go to state 44


State 36

   57 expressions: '-' . expressions

    ID           shift, and go to state 60
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37

    expressions          go to state 68
    const_exp            go to state 42
    bool_expression      go to state 43
    function_invocation  go to state 44


State 37

   58 expressions: '(' . expressions ')'
   74 bool_expression: '(' . bool_expression ')'

    ID           shift, and go to state 60
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37

    expressions          go to state 69
    const_exp            go to state 42
    bool_expression      go to state 70
    function_invocation  go to state 44


State 38

    4 statments: statments statment .

    $default  reduce using rule 4 (statments)


State 39

   42 statment: block .

    $default  reduce using rule 42 (statment)


State 40

   43 statment: simple .

    $default  reduce using rule 43 (statment)


State 41

   44 statment: expressions .
   59 expressions: expressions . '*' expressions
   60            | expressions . '/' expressions
   61            | expressions . MOD expressions
   62            | expressions . '+' expressions
   63            | expressions . '-' expressions
   75 bool_expression: expressions . '<' expressions
   76                | expressions . LESS_EQUAL expressions
   77                | expressions . '=' expressions
   78                | expressions . MORE_EQUAL expressions
   79                | expressions . '>' expressions
   80                | expressions . NOT_EQUAL expressions
   82                | expressions . AND expressions
   83                | expressions . OR expressions

    MOD         shift, and go to state 71
    LESS_EQUAL  shift, and go to state 72
    MORE_EQUAL  shift, and go to state 73
    NOT_EQUAL   shift, and go to state 74
    AND         shift, and go to state 75
    OR          shift, and go to state 76
    '<'         shift, and go to state 77
    '='         shift, and go to state 78
    '>'         shift, and go to state 79
    '+'         shift, and go to state 80
    '-'         shift, and go to state 81
    '*'         shift, and go to state 82
    '/'         shift, and go to state 83

    '-'       [reduce using rule 44 (statment)]
    $default  reduce using rule 44 (statment)


State 42

   65 expressions: const_exp .

    $default  reduce using rule 65 (expressions)


State 43

   64 expressions: bool_expression .

    $default  reduce using rule 64 (expressions)


State 44

   66 expressions: function_invocation .

    $default  reduce using rule 66 (expressions)


State 45

   45 statment: conditional .

    $default  reduce using rule 45 (statment)


State 46

   46 statment: loop .

    $default  reduce using rule 46 (statment)


State 47

   24 function: FUNCTION ID '(' . ')' ':' Types $@1 contents END ID
   26         | FUNCTION ID '(' . functionVarA functionVarB ')' ':' Types $@2 contents END ID

    ID   shift, and go to state 84
    ')'  shift, and go to state 85

    functionVarA  go to state 86


State 48

   33 procedure: PROCEDURE ID '(' . ')' $@3 contents END ID
   35          | PROCEDURE ID '(' . functionVarA functionVarB ')' $@4 contents END ID

    ID   shift, and go to state 84
    ')'  shift, and go to state 87

    functionVarA  go to state 88


State 49

   14 variable: VAR ID ASSIGN . const_exp

    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24

    const_exp  go to state 89


State 50

   13 variable: VAR ID ':' . Type
   15         | VAR ID ':' . Type ASSIGN const_exp
   18 array: VAR ID ':' . ARRAY const_exp '.' '.' const_exp OF Type

    REAL    shift, and go to state 90
    INT     shift, and go to state 91
    STRING  shift, and go to state 92
    BOOL    shift, and go to state 93
    ARRAY   shift, and go to state 94

    Type  go to state 95


State 51

   12 constant: CONST ID ASSIGN . expressions

    ID           shift, and go to state 60
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37

    expressions          go to state 96
    const_exp            go to state 42
    bool_expression      go to state 43
    function_invocation  go to state 44


State 52

   11 constant: CONST ID ':' . Type ASSIGN expressions

    REAL    shift, and go to state 90
    INT     shift, and go to state 91
    STRING  shift, and go to state 92
    BOOL    shift, and go to state 93

    Type  go to state 97


State 53

   49 simple: ID ASSIGN . expressions

    ID           shift, and go to state 60
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37

    expressions          go to state 98
    const_exp            go to state 42
    bool_expression      go to state 43
    function_invocation  go to state 44


State 54

   84 function_invocation: ID '(' . ')'
   85                    | ID '(' . functionInputA functionInputB ')'

    ID           shift, and go to state 60
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37
    ')'          shift, and go to state 99

    expressions          go to state 100
    const_exp            go to state 42
    bool_expression      go to state 43
    function_invocation  go to state 44
    functionInputA       go to state 101


State 55

   67 expressions: ID '[' . INT_NUMBER ']'

    INT_NUMBER  shift, and go to state 102


State 56

   48 block: BEG $@5 . content END

    ID           shift, and go to state 19
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    BEG          shift, and go to state 25
    EXIT         shift, and go to state 26
    FOR          shift, and go to state 27
    GET          shift, and go to state 28
    IF           shift, and go to state 29
    LOOP         shift, and go to state 30
    PUT          shift, and go to state 31
    RESULT       shift, and go to state 32
    RETURN       shift, and go to state 33
    SKIP         shift, and go to state 34
    VAR          shift, and go to state 6
    CONST        shift, and go to state 7
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37

    constant             go to state 103
    variable             go to state 104
    array                go to state 105
    content              go to state 106
    statment             go to state 107
    block                go to state 39
    simple               go to state 40
    expressions          go to state 41
    const_exp            go to state 42
    bool_expression      go to state 43
    function_invocation  go to state 44
    conditional          go to state 45
    loop                 go to state 46


State 57

   55 simple: EXIT WHEN . bool_expression

    ID           shift, and go to state 60
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37

    expressions          go to state 62
    const_exp            go to state 42
    bool_expression      go to state 108
    function_invocation  go to state 44


State 58

   96 loop: FOR ID . ':' expressions '.' '.' expressions $@9 contents END FOR

    ':'  shift, and go to state 109


State 59

   98 loop: FOR DECREASING . ID ':' expressions '.' '.' expressions $@10 contents END FOR

    ID  shift, and go to state 110


State 60

   67 expressions: ID . '[' INT_NUMBER ']'
   68            | ID .
   84 function_invocation: ID . '(' ')'
   85                    | ID . '(' functionInputA functionInputB ')'

    '('  shift, and go to state 54
    '['  shift, and go to state 55

    '('       [reduce using rule 68 (expressions)]
    $default  reduce using rule 68 (expressions)


State 61

   51 simple: GET expressions .
   59 expressions: expressions . '*' expressions
   60            | expressions . '/' expressions
   61            | expressions . MOD expressions
   62            | expressions . '+' expressions
   63            | expressions . '-' expressions
   75 bool_expression: expressions . '<' expressions
   76                | expressions . LESS_EQUAL expressions
   77                | expressions . '=' expressions
   78                | expressions . MORE_EQUAL expressions
   79                | expressions . '>' expressions
   80                | expressions . NOT_EQUAL expressions
   82                | expressions . AND expressions
   83                | expressions . OR expressions

    MOD         shift, and go to state 71
    LESS_EQUAL  shift, and go to state 72
    MORE_EQUAL  shift, and go to state 73
    NOT_EQUAL   shift, and go to state 74
    AND         shift, and go to state 75
    OR          shift, and go to state 76
    '<'         shift, and go to state 77
    '='         shift, and go to state 78
    '>'         shift, and go to state 79
    '+'         shift, and go to state 80
    '-'         shift, and go to state 81
    '*'         shift, and go to state 82
    '/'         shift, and go to state 83

    '-'       [reduce using rule 51 (simple)]
    $default  reduce using rule 51 (simple)


State 62

   59 expressions: expressions . '*' expressions
   60            | expressions . '/' expressions
   61            | expressions . MOD expressions
   62            | expressions . '+' expressions
   63            | expressions . '-' expressions
   75 bool_expression: expressions . '<' expressions
   76                | expressions . LESS_EQUAL expressions
   77                | expressions . '=' expressions
   78                | expressions . MORE_EQUAL expressions
   79                | expressions . '>' expressions
   80                | expressions . NOT_EQUAL expressions
   82                | expressions . AND expressions
   83                | expressions . OR expressions

    MOD         shift, and go to state 71
    LESS_EQUAL  shift, and go to state 72
    MORE_EQUAL  shift, and go to state 73
    NOT_EQUAL   shift, and go to state 74
    AND         shift, and go to state 75
    OR          shift, and go to state 76
    '<'         shift, and go to state 77
    '='         shift, and go to state 78
    '>'         shift, and go to state 79
    '+'         shift, and go to state 80
    '-'         shift, and go to state 81
    '*'         shift, and go to state 82
    '/'         shift, and go to state 83


State 63

   64 expressions: bool_expression .
   90 conditional: IF bool_expression . THEN $@6 contents ELSE content END IF
   92            | IF bool_expression . THEN $@7 contents END IF

    THEN  shift, and go to state 111

    $default  reduce using rule 64 (expressions)


State 64

   94 loop: LOOP $@8 . contents END LOOP

    $default  reduce using rule 37 (contents)

    contents  go to state 112


State 65

   50 simple: PUT expressions .
   59 expressions: expressions . '*' expressions
   60            | expressions . '/' expressions
   61            | expressions . MOD expressions
   62            | expressions . '+' expressions
   63            | expressions . '-' expressions
   75 bool_expression: expressions . '<' expressions
   76                | expressions . LESS_EQUAL expressions
   77                | expressions . '=' expressions
   78                | expressions . MORE_EQUAL expressions
   79                | expressions . '>' expressions
   80                | expressions . NOT_EQUAL expressions
   82                | expressions . AND expressions
   83                | expressions . OR expressions

    MOD         shift, and go to state 71
    LESS_EQUAL  shift, and go to state 72
    MORE_EQUAL  shift, and go to state 73
    NOT_EQUAL   shift, and go to state 74
    AND         shift, and go to state 75
    OR          shift, and go to state 76
    '<'         shift, and go to state 77
    '='         shift, and go to state 78
    '>'         shift, and go to state 79
    '+'         shift, and go to state 80
    '-'         shift, and go to state 81
    '*'         shift, and go to state 82
    '/'         shift, and go to state 83

    '-'       [reduce using rule 50 (simple)]
    $default  reduce using rule 50 (simple)


State 66

   52 simple: RESULT expressions .
   59 expressions: expressions . '*' expressions
   60            | expressions . '/' expressions
   61            | expressions . MOD expressions
   62            | expressions . '+' expressions
   63            | expressions . '-' expressions
   75 bool_expression: expressions . '<' expressions
   76                | expressions . LESS_EQUAL expressions
   77                | expressions . '=' expressions
   78                | expressions . MORE_EQUAL expressions
   79                | expressions . '>' expressions
   80                | expressions . NOT_EQUAL expressions
   82                | expressions . AND expressions
   83                | expressions . OR expressions

    MOD         shift, and go to state 71
    LESS_EQUAL  shift, and go to state 72
    MORE_EQUAL  shift, and go to state 73
    NOT_EQUAL   shift, and go to state 74
    AND         shift, and go to state 75
    OR          shift, and go to state 76
    '<'         shift, and go to state 77
    '='         shift, and go to state 78
    '>'         shift, and go to state 79
    '+'         shift, and go to state 80
    '-'         shift, and go to state 81
    '*'         shift, and go to state 82
    '/'         shift, and go to state 83

    '-'       [reduce using rule 52 (simple)]
    $default  reduce using rule 52 (simple)


State 67

   59 expressions: expressions . '*' expressions
   60            | expressions . '/' expressions
   61            | expressions . MOD expressions
   62            | expressions . '+' expressions
   63            | expressions . '-' expressions
   75 bool_expression: expressions . '<' expressions
   76                | expressions . LESS_EQUAL expressions
   77                | expressions . '=' expressions
   78                | expressions . MORE_EQUAL expressions
   79                | expressions . '>' expressions
   80                | expressions . NOT_EQUAL expressions
   81                | NOT expressions .
   82                | expressions . AND expressions
   83                | expressions . OR expressions

    MOD         shift, and go to state 71
    LESS_EQUAL  shift, and go to state 72
    MORE_EQUAL  shift, and go to state 73
    NOT_EQUAL   shift, and go to state 74
    '<'         shift, and go to state 77
    '='         shift, and go to state 78
    '>'         shift, and go to state 79
    '+'         shift, and go to state 80
    '-'         shift, and go to state 81
    '*'         shift, and go to state 82
    '/'         shift, and go to state 83

    $default  reduce using rule 81 (bool_expression)


State 68

   57 expressions: '-' expressions .
   59            | expressions . '*' expressions
   60            | expressions . '/' expressions
   61            | expressions . MOD expressions
   62            | expressions . '+' expressions
   63            | expressions . '-' expressions
   75 bool_expression: expressions . '<' expressions
   76                | expressions . LESS_EQUAL expressions
   77                | expressions . '=' expressions
   78                | expressions . MORE_EQUAL expressions
   79                | expressions . '>' expressions
   80                | expressions . NOT_EQUAL expressions
   82                | expressions . AND expressions
   83                | expressions . OR expressions

    $default  reduce using rule 57 (expressions)


State 69

   58 expressions: '(' expressions . ')'
   59            | expressions . '*' expressions
   60            | expressions . '/' expressions
   61            | expressions . MOD expressions
   62            | expressions . '+' expressions
   63            | expressions . '-' expressions
   75 bool_expression: expressions . '<' expressions
   76                | expressions . LESS_EQUAL expressions
   77                | expressions . '=' expressions
   78                | expressions . MORE_EQUAL expressions
   79                | expressions . '>' expressions
   80                | expressions . NOT_EQUAL expressions
   82                | expressions . AND expressions
   83                | expressions . OR expressions

    MOD         shift, and go to state 71
    LESS_EQUAL  shift, and go to state 72
    MORE_EQUAL  shift, and go to state 73
    NOT_EQUAL   shift, and go to state 74
    AND         shift, and go to state 75
    OR          shift, and go to state 76
    '<'         shift, and go to state 77
    '='         shift, and go to state 78
    '>'         shift, and go to state 79
    '+'         shift, and go to state 80
    '-'         shift, and go to state 81
    '*'         shift, and go to state 82
    '/'         shift, and go to state 83
    ')'         shift, and go to state 113


State 70

   64 expressions: bool_expression .
   74 bool_expression: '(' bool_expression . ')'

    ')'  shift, and go to state 114

    ')'       [reduce using rule 64 (expressions)]
    $default  reduce using rule 64 (expressions)


State 71

   61 expressions: expressions MOD . expressions

    ID           shift, and go to state 60
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37

    expressions          go to state 115
    const_exp            go to state 42
    bool_expression      go to state 43
    function_invocation  go to state 44


State 72

   76 bool_expression: expressions LESS_EQUAL . expressions

    ID           shift, and go to state 60
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37

    expressions          go to state 116
    const_exp            go to state 42
    bool_expression      go to state 43
    function_invocation  go to state 44


State 73

   78 bool_expression: expressions MORE_EQUAL . expressions

    ID           shift, and go to state 60
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37

    expressions          go to state 117
    const_exp            go to state 42
    bool_expression      go to state 43
    function_invocation  go to state 44


State 74

   80 bool_expression: expressions NOT_EQUAL . expressions

    ID           shift, and go to state 60
    INT_NUMBER   shift, and go to state 20
    REAL_NUMBER  shift, and go to state 21
    STR          shift, and go to state 22
    TRUE         shift, and go to state 23
    FALSE        shift, and go to state 24
    NOT          shift, and go to state 35
    '-'          shift, and go to state 36
    '('          shift, and go to state 37
